--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -159,3 +159,76 @@
   bibtex_show={true},
   preview={cbnet.jpg},
 }
+
+@inproceedings{DBLP:conf/aaai/LiuWWLZTL20,
+  author    = {Yudong Liu and
+               Yongtao Wang and
+               Siwei Wang and
+               Tingting Liang and
+               Qijie Zhao and
+               Zhi Tang and
+               Haibin Ling},
+  title     = {CBNet: {A} Novel Composite Backbone Network Architecture for Object
+               Detection},
+  booktitle = AAAI,
+  pages     = {11653--11660},
+  publisher = {{AAAI} Press},
+  year      = {2020},
+  url       = {https://ojs.aaai.org/index.php/AAAI/article/view/6834},
+  timestamp = {Mon, 07 Mar 2022 16:57:58 +0100},
+  biburl    = {https://dblp.org/rec/conf/aaai/LiuWWLZTL20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  pdf={https://arxiv.org/abs/1909.03625},
+  code={https://github.com/VDIGPKU/CBNet_caffe},
+  bibtex_show={true},
+  preview={cbnet.jpg},
+}
+
+@article{DBLP:journals/corr/abs-2205-14951,
+  author    = {Kaicheng Yu and
+               Tao Tang and
+               Hongwei Xie and
+               Zhiwei Lin and
+               Zhongwei Wu and
+               Zhongyu Xia and
+               Tingting Liang and
+               Haiyang Sun and
+               Jiong Deng and
+               Dayang Hao and
+               Yongtao Wang and
+               Xiaodan Liang and
+               Bing Wang},
+  title     = {Benchmarking the Robustness of LiDAR-Camera Fusion for 3D Object Detection},
+  journal   = {arXiv preprint: 2205.14951},
+  year      = {2022},
+  url       = {https://doi.org/10.48550/arXiv.2205.14951},
+  doi       = {10.48550/arXiv.2205.14951},
+  timestamp = {Wed, 01 Jun 2022 13:56:25 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-2205-14951.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  pdf={https://arxiv.org/abs/2205.14951},
+  code={https://github.com/kcyu2014/lidar-camera-robust-benchmark},
+  bibtex_show={true},
+  preview={benchmark.jpg},
+}
+
+@article{DBLP:journals/corr/abs-2207-01271,
+  author    = {Zhiwei Lin and
+               Tingting Liang and
+               Taihong Xiao and
+               Yongtao Wang and
+               Zhi Tang and
+               Ming{-}Hsuan Yang},
+  title     = {FlowNAS: Neural Architecture Search for Optical Flow Estimation},
+  journal   = {arXiv preprint: 2207.01271},
+  year      = {2022},
+  url       = {https://doi.org/10.48550/arXiv.2207.01271},
+  doi       = {10.48550/arXiv.2207.01271},
+  timestamp = {Wed, 06 Jul 2022 15:50:43 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-2207-01271.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  pdf={https://arxiv.org/abs/2207.01271},
+  code={https://github.com/VDIGPKU/FlowNAS},
+  bibtex_show={true},
+  preview={flownas.jpg},
+}
