--- a/_posts/2012-12-29-cbnetv2.md
+++ b/_posts/2012-12-29-cbnetv2.md
@@ -3,15 +3,15 @@ layout: distill
 title: 'CBNet: A Composite Backbone Network Architecture for Object Detection'
 description: TIP
 giscus_comments: true
-date: 2022-12-29
+date: 2022-12-28
 
 authors:
   - name: Tingting Liang
-    url: ""
+    url: "https://tingtingliangvs.github.io"
     affiliations:
       name: Peking University
 
-bibliography: 2018-12-22-distill.bib
+# bibliography: 2018-12-22-distill.bib
 
 # Optionally, you can add a table of contents to your post.
 # NOTES:
