--- a/_posts/2012-12-29-opanas.md
+++ b/_posts/2012-12-29-opanas.md
@@ -3,15 +3,16 @@ layout: distill
 title: 'OPANAS: One-Shot Path Aggregation Network Architecture Search for Object Detection'
 description: CVPR 2021
 giscus_comments: true
-date: 2022-12-29
+date: 2022-12-27
 
 authors:
   - name: Tingting Liang
-    url: ""
+    url: "https://tingtingliangvs.github.io"
     affiliations:
       name: Peking University
+  
 
-bibliography: 2018-12-22-distill.bib
+# bibliography: 2018-12-22-distill.bib
 
 # Optionally, you can add a table of contents to your post.
 # NOTES:
@@ -25,6 +26,7 @@ toc:
     # subsections:
     #   - name: Example Child Subsection 1
     #   - name: Example Child Subsection 2
+  - name: Overview Video
   - name: Further Information
 
 # Below is an example of injecting additional post-specific styles.
@@ -56,12 +58,12 @@ _styles: >
 </div>
 <div class="caption">
     1. Single-path FPN super-net from SPOS search space. 2. Our OPANAS: 
-		(a) super-net training, i.e.,  the optimization of super-net weights; 
+		(a) super-net training, i.e., the optimization of super-net weights; 
 		(b) optimal sub-net search with an evolutionary algorithm; 
 		(c) the searched optimal architecture. 
 </div>
 
-Recently, neural architecture search (NAS) has been exploited to design feature pyramid networks (FPNs) and achieved promising results for visual object detection. Encouraged by the success, we propose a novel One-Shot Path Aggregation Network Architecture Search (OPANAS) algorithm, which significantly improves both searching efficiency and detection accuracy. Specifically, we first introduce six heterogeneous information paths to build our search space, namely top-down, bottom-up, fusing-splitting, scale-equalizing, skip-connect and none. Second, we propose a novel search space of FPNs, in which each FPN candidate is represented by a densely-connected directed acyclic graph (each node is a feature pyramid and each edge is one of the six heterogeneous information paths). Third, we propose an efficient one-shot search method to find the optimal path aggregation architecture, that is, we first train a super-net and then find the optimal candidate with an evolutionary algorithm. Experimental results demonstrate the efficacy of the proposed OPANAS for object detection: (1) OPANAS is more efficient than state-of-the-art methods (i.e., NAS-FPN and Auto-FPN), at significantly smaller searching cost (i.e., only 4 GPU days on MS-COCO); (2) the optimal architecture found by OPANAS significantly improves main-stream detectors including RetinaNet, Faster R-CNN and Cascade R-CNN, by 2.3~3.2 % mAP comparing to their FPN counterparts; and (3) a new state-of-the-art accuracy-speed trade-off (52.2 % mAP at 7.6 FPS) at smaller training costs than comparable state-of-the-arts. 
+Recently, neural architecture search (NAS) has been exploited to design feature pyramid networks (FPNs) and achieved promising results for visual object detection. Encouraged by the success, we propose a novel One-Shot Path Aggregation Network Architecture Search (OPANAS) algorithm, which significantly improves both searching efficiency and detection accuracy. Specifically, we first introduce six heterogeneous information paths to build our search space, namely top-down, bottom-up, fusing-splitting, scale-equalizing, skip-connect and none. Second, we propose a novel search space of FPNs, in which each FPN candidate is represented by a densely-connected directed acyclic graph (each node is a feature pyramid and each edge is one of the six heterogeneous information paths). Third, we propose an efficient one-shot search method to find the optimal path aggregation architecture, that is, we first train a super-net and then find the optimal candidate with an evolutionary algorithm. Experimental results demonstrate the efficacy of the proposed OPANAS for object detection: (1) OPANAS is more efficient than state-of-the-art methods (i.e., NAS-FPN and Auto-FPN), at significantly smaller searching cost (i.e., only 4 GPU days on MS-COCO); (2) the optimal architecture found by OPANAS significantly improves main-stream detectors including RetinaNet, Faster R-CNN and Cascade R-CNN, by 2.3~3.2% mAP comparing to their FPN counterparts; and (3) a new state-of-the-art accuracy-speed trade-off (52.2% mAP at 7.6 FPS) at smaller training costs than comparable state-of-the-arts. 
 
 <div class="row mt-3">
     <div class="col-sm mt-3 mt-md-0">
@@ -72,6 +74,19 @@ Recently, neural architecture search (NAS) has been exploited to design feature 
     The proposed six heterogeneous information paths mapping 4-level pyramid features $\{P_2, P_3, P_4, P_5\}$ to $\{F_2, F_3, F_4, F_5\}$. (a)-(d) are parameterized and (e)-(f) are parameter-free.
 </div>
 
+## Overview Video
+
+<div class="videoWrapper" style="position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 25px;
+  height: 0;">
+    <iframe style="position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;" width="560" height="315" src="http://www.youtube.com/embed/Erdso3frbEA" frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
 
 ## Further Information
