--- a/_posts/2012-12-29-opanas.md
+++ b/_posts/2012-12-29-opanas.md
@@ -76,7 +76,18 @@ Recently, neural architecture search (NAS) has been exploited to design feature 
 
 ## Overview Video
 
-<div class="videoWrapper" style="position: relative;
+<div class="row mt-3">
+    <div class="col-sm mt-3 mt-md-0">
+        <a href="https://www.youtube.com/watch?v=Erdso3frbEA" title="YouTube">{% include figure.html path="assets/img/opanas/youtube.jpg" class="img-fluid rounded z-depth-1" %}</a>
+    </div>
+</div>
+<div class="caption">
+    Click to watch video.
+</div>
+
+
+
+<!-- <div class="videoWrapper" style="position: relative;
   padding-bottom: 56.25%;
   padding-top: 25px;
   height: 0;">
@@ -86,7 +97,7 @@ Recently, neural architecture search (NAS) has been exploited to design feature 
   width: 100%;
   height: 100%;" width="560" height="315" src="http://www.youtube.com/embed/Erdso3frbEA" frameborder="0"
       allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
+</div> -->
 
 
 ## Further Information
